--- a/deep-shallow-edsl.cabal
+++ b/deep-shallow-edsl.cabal
@@ -1,16 +1,7 @@
 name:                  deep-shallow-edsl
 version:               0.1
 synopsis:              Combining Deep and Shallow Embedding for EDSL
-description:           Slightly adapted code from the paper
-                       \"Combining Deep and Shallow Embedding for EDSL\"
-                       .
-                         * <http://www.cse.chalmers.se/~emax/documents/svenningsson2013combining.pdf>
-                       .
-                         * <http://dx.doi.org/10.1007/978-3-642-40447-4_2>
-                       .
-                       The paper descibes a design pattern for embedded DSLs (EDSLs) where a
-                       combination of deep and shallow embedding is used in order to get most
-                       advantages from both approaches.
+description:           See: <https://github.com/emilaxelsson/deep-shallow-edsl>
 license:               BSD3
 license-file:          LICENSE
 author:                Emil Axelsson
