--- a/deep-shallow-edsl.cabal
+++ b/deep-shallow-edsl.cabal
@@ -13,5 +13,10 @@ cabal-version:         >=1.10
 library
   exposed-modules:     FunC
   other-extensions:    GADTs, TypeOperators, FlexibleInstances, TypeFamilies, MultiParamTypeClasses, OverlappingInstances, RankNTypes
-  build-depends:       base >=4.6 && <4.7, mtl >=2.1 && <2.2, array >=0.4 && <0.5, containers >=0.5 && <0.6, tree-view >=0.4 && <0.5
+  build-depends:
+    base <5,
+    mtl,
+    array,
+    containers,
+    tree-view >=0.4
   default-language:    Haskell2010
