--- a/deep-shallow-edsl.cabal
+++ b/deep-shallow-edsl.cabal
@@ -11,12 +11,23 @@ build-type:            Simple
 cabal-version:         >=1.10
 
 library
-  exposed-modules:     FunC
-  other-extensions:    GADTs, TypeOperators, FlexibleInstances, TypeFamilies, MultiParamTypeClasses, OverlappingInstances, RankNTypes
+  exposed-modules:
+    FunC
+
+  other-extensions:
+    GADTs, TypeOperators,
+    FlexibleInstances,
+    TypeFamilies,
+    MultiParamTypeClasses,
+    OverlappingInstances,
+    RankNTypes
+
   build-depends:
     base <5,
     mtl,
     array,
     containers,
     tree-view >=0.4
-  default-language:    Haskell2010
+
+  default-language:
+    Haskell2010
