Removed accidental comma

--- a/deep-shallow-edsl.cabal
+++ b/deep-shallow-edsl.cabal
@@ -18,7 +18,7 @@ library
     GADTs,
     FlexibleContexts,
     FlexibleInstances,
-    TypeFamilies,
+    TypeFamilies
 
   build-depends:
     base <5,
